<resources>
    <string name="app_name">AlmaGestor</string>
    <string name="Login">Inicio Sesión</string>
    <string name="Username">Usuario</string>
    <string name="PDV">Usuario (Código PDV)</string>
    <string name="Password">Contraseña</string>
    <string name="Register">Registro</string>
    <string name="Welcome">¡Bienvenido!</string>
    <string name="storeName">Nombre Tienda</string>
    <string name="Eslogan">Organiza, controla y optimiza tus almacenes con AlmaGestor, tu solución inteligente de gestión</string>
    <string name="IngresaCorreo">Ingresa tu correo:</string>
    <string name="IngresaPass">Ingresa tu nueva contraseña:</string>
    <string name="RecoverPassword">Recuperación de contraseña</string>
    <string name="email">Email</string>
    <string name="nif">NIF/CIF</string>
    <string name="recover">Recuperar</string>
    <string name="msgCorreo">Se enviará un correo electrónico con todos los pasos a seguir para recuperar la contraseña</string>
    <string name="forgotPassword">¿Ha olvidado la contraseña?</string>
    <string name="password2">Insertela de nuevo</string>
    <string name="Venta">Venta</string>
    <string name="Buscar">Buscar</string>
    <string name="Llamar">Llamar</string>
    <string name="TakeAway">Recogida</string>
    <string name="Productos">Productos</string>
    <string name="Entregas">Entregas</string>
    <string name="Clientes">Clientes</string>
    <string name="Registrar">Registrar</string>
    <string name="Facturas">Facturas</string>
    <string name="Registrar_factura">Registrar Factura</string>
    <string name="Tienda">Tienda</string>
    <string name="OpenNavigation" translatable="false">OpenNav</string>
    <string name="CloseNavigation" translatable="false">CloseNav</string>
    <string name="Mi">Mi</string>
    <string name="Perfil">Perfil</string>
    <string name="Email">Email</string>
    <string name="Direccion">Dirección</string>
    <string name="AñadirInfo">Añade Información</string>
    <string name="Telefono">Teléfono</string>
    <string name="InformacionTienda">Información dirección de tienda </string>
    <string name="Street">Dirección : </string>
    <string name="Town">Municipio: </string>
    <string name="CodePostal">Código Postal: </string>
    <string name="Save">Guardar</string>
    <string name="Cancel">Cancelar</string>
    <string name="info_product">Producto: </string>
    <string name="info_UPDATEproduct">Modificación Stock: </string>
    <string name="info_product_name">Nombre Producto</string>
    <string name="info_product_price">Precio: </string>
    <string name="info_product_barcode" translatable="false">Barcode</string>
    <string name="info_product_Stock" translatable="false">Stock: </string>
    <string name="miss_name_ean">Falta nombre o ean de producto </string>
    <string name="saveCorrect">Guardado </string>
    <string name="AddClientHeader">Creación de Clientes</string>
    <string name="NameClient">Nombre Cliente: </string>
    <string name="NifClient">NIF: </string>
    <string name="PhoneClient">Teléfono: </string>
    <string name="StreetClient">Dirección: </string>
    <string name="WayofPaiment">¿Forma de pago? </string>
    <string name="efectivo">Efectivo </string>
    <string name="tarjeta">Tarjeta </string>
    <string name="pagar">Total: </string>
    <string name="Pagado">Cobrado: </string>
    <string name="ProductoBorrado">Producto borrado con éxito db </string>
    <string name="ProductoBorrado2">Producto borrado cesta compra </string>
    <string name="SELLFOBean">Introduce Código Barras: </string>
    <string name="FOProductos">Productos </string>
    <string name="FOClients">Clientes </string>
    <string name="CerrarSesion">Cerrar Sesión </string>
    <string name="Synchro">Copia Seguridad</string>
    <string name="ProductNotFound">Código de barras no encontrado en el listado de productos</string>
    <string name="MagasinNotCompleted">Parámetros de tienda no completados, rellenalos antes de facturar</string>
    <string name="UsuarioNuevo">¿Primer inicio de sesión?, Empieza ahora</string>
    <string name="areyouSure">¿Estás seguro de borrar este producto?</string>
    <string name="No">No</string>
    <string name="Si">Si</string>

</resources>