<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/icon_home"
            android:iconTint="@color/purple"
            android:title="@string/Venta" />
        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/icon_productos"
            android:iconTint="@color/purple"
            android:title="@string/Productos" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/icon_clients"
            android:iconTint="@color/purple"
            android:title="@string/Clientes" />
    </group>

    <item android:title="@string/Tienda">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_tienda"
                    android:icon="@drawable/icon_shop"
                    android:iconTint="@color/purple"
                    android:title="@string/Tienda" />
            </group>
        </menu>
    </item>

</menu>