<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_vg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_corner"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_clear"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/icon_home"
                android:elevation="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/txttite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-black"
                android:text="@string/InformacionTienda"
                android:textColor="@color/colorBlacky"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/Street_edit"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/Street"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/town_edit"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/Town"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/Codepostal_edit"
                android:background="@drawable/custom_edittext"

                android:drawablePadding="8dp"
                android:hint="@string/CodePostal"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp">

                <Button
                    android:id="@+id/btn_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cancel"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/red"/>

                <Button
                    android:id="@+id/btn_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Save"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>