<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_inputShop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/btn_close_inputdata_client"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_clear"
            android:layout_gravity="right"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AddClientHeader"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:layout_marginBottom="10dp">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/NameClient"
                android:textColor="@color/purple"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/inputName_data_clientData"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_margin="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/NifClient"
                android:textColor="@color/purple"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/inputNIF_data_clientData"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_margin="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/PhoneClient"
                android:textColor="@color/purple"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/inputPHONE_data_clientData"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_margin="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/StreetClient"
                android:textColor="@color/purple"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/inputSTREET_data_clientData"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_margin="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp">

                <Button
                    android:id="@+id/btn_no_inputdata_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cancel"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/red"/>

                <Button
                    android:id="@+id/btn_yes_inputdata_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Save"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>