<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_efective_vg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_corner"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
        <ImageView
            android:id="@+id/btn_close_card_efective"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_clear"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/title_card_efective"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/WayofPaiment"
                android:textColor="@color/colorBlacky"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp">

                <Button
                    android:id="@+id/tarjeta_btn_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tarjeta"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/red"/>

                <Button
                    android:id="@+id/efective_btn_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/efectivo"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>