<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_vg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_corner"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
        <ImageView
            android:id="@+id/btn_close_UPDATESTOCK"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_clear"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/txttite_UPDATESTOCK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/info_UPDATEproduct"
                android:textColor="@color/colorBlacky"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/txtStock_product_UPDATESTOCK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/info_product_Stock"
                    android:textColor="@color/colorBlacky"
                    android:layout_marginRight="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editext_stock_UPDATESTOCK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="10dp"
                    android:minWidth="110dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp">

                <Button
                    android:id="@+id/btn_no_lay_UPDATESTOCK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cancel"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/red"/>

                <Button
                    android:id="@+id/btn_yes_lay_UPDATESTOCK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Save"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>